# mac-min-dashboard

./: .gitignore  README.md  conftest.py  pyproject.toml  skills.lock.json
.cursor/agents/: solo-founder.md
.cursor/plans/: finish_v1_implementation_102fed8c.plan.md  ux_retheme_plan_763e06c1.plan.md
.cursor/rules/: readme-on-ship.mdc  solo-founder.mdc
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/mac_mini_api/: __init__.py  app.py  deps.py  main.py  schemas.py
apps/api/tests/: test_api_app_edges.py  test_api_control.py  test_api_logs.py  test_api_pin.py  test_api_read.py  test_api_settings.py  test_api_static.py  test_main.py  test_production_logs.py
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css  types.ts
apps/web/src/api/: client.ts
apps/web/src/components/: AllWorkloadsView.tsx  AuditView.tsx  FleetView.tsx  LogsModal.tsx  SettingsView.tsx
apps/web/tests/: AllWorkloadsView.test.tsx  App.test.tsx  AuditView.test.tsx  FleetView.fetch.test.tsx  FleetView.test.tsx  LogsModal.test.tsx  SettingsView.test.tsx  client.test.ts
apps/worker/: pyproject.toml
apps/worker/src/mac_mini_worker/: __init__.py  main.py  scheduler.py  ssh.py
apps/worker/tests/: test_scheduler.py  test_ssh.py  test_worker_main.py
config/: config.yaml.example
deploy/: README.md  plist_render.py
deploy/launchd/: com.macmin.dashboard.api.plist  com.macmin.dashboard.worker.plist
deploy/tests/: test_launchd_plists.py
docs/: PLAN.md  ssh-onboarding.md
docs/runbooks/: mac-mini-hub-deploy.md
scripts/: deploy-hub.sh  install-launchd.sh  install-skills.sh  preflight_fleet.py  smoke-test.sh
specs/: 01-config-and-schema.md  02-ssh-executor.md  03-docker-scanner.md  04-severity.md  05-auto-promote.md  06-worker-poll.md  07-api-read.md  08-api-control.md  09-telegram.md  10-ui-fleet.md  11-worker-entrypoint.md  12-demo-seed.md  13-launchd-deploy.md  14-api-pin.md  15-api-restart-stop.md  16-settings-api.md  README.md
