[project]
name = "mac-mini-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mac-mini-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
]

[tool.uv.sources]
mac-mini-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mac_mini_api"]
