[project]
name = "mac-mini-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mac-mini-core",
]

[project.scripts]
mac-mini-worker = "mac_mini_worker.main:run"

[tool.uv.sources]
mac-mini-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mac_mini_worker"]
